<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/background">


    <TextView
        android:id="@+id/memorySave"
        style="@style/NeutralButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/memoryRead"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/memoryRead"
        style="@style/NeutralButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/mr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/memoryClear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/memorySave"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/memoryClear"
        style="@style/NeutralButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/mc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/memoryPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/memoryRead"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/memoryPlus"
        style="@style/NeutralButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/m_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/memoryMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/memoryClear"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/memoryMinus"
        style="@style/NeutralButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/m_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/memoryPlus"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>